Sezione 25: Interazione Asincrona fra micro servizi con RabbitMQ - 183. Test Operativo Interazione Asincrona