@@ -1,8 +1,10 @@
 package com.xantrix.webapp.service;
 
 import com.xantrix.webapp.dto.ClientiDTO;
+import com.xantrix.webapp.dto.CreateClientiDTO;
 import com.xantrix.webapp.entity.Cards;
 import com.xantrix.webapp.entity.Clienti;
+import com.xantrix.webapp.exception.DuplicateException;
 import com.xantrix.webapp.exception.NotFoundException;
 import com.xantrix.webapp.repository.ClientiRepository;
 import lombok.extern.slf4j.Slf4j;
@@ -17,6 +19,7 @@ import org.springframework.context.support.ResourceBundleMessageSource;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDate;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
@@ -27,6 +30,8 @@ import java.util.stream.Collectors;
 @Slf4j
 public class ClientiServiceImpl implements ClientiService {
 
+    public static final String CLIENTE_DUPLICATO = "Cliente %s presente in anagrafica!";
+    public static final String VERIFICHIAMO_LA_PRESENZA_DEL_CLIENTE_PASSATO = "Verifichiamo la presenza del cliente passato";
     public static final String NOT_FOUND_CLIENTI_BY_CODICE = "NotFound.Clienti.codice";
     static final String RETURN_VALUE = "return value is {}";
     private final ClientiRepository clientiRepository;
@@ -80,7 +85,44 @@ public class ClientiServiceImpl implements ClientiService {
     public List<ClientiDTO> findByCognome(String cognome) {
         List<ClientiDTO> result = clientiRepository.findByCognomeLike(cognome)
                 .stream().map(this::createClientiDTO)
-                .collect(Collectors.toList());
+                .toList();
+        log.trace(RETURN_VALUE, result);
+        return result;
+    }
+
+    @Override
+    @Transactional
+    public ClientiDTO createClienti(CreateClientiDTO createClientiDTO) throws DuplicateException {
+        log.debug("createClienti(createClientiDTO={})", createClientiDTO);
+        ClientiDTO result;
+        log.debug(VERIFICHIAMO_LA_PRESENZA_DEL_CLIENTE_PASSATO);
+        if (clientiRepository.findByCodice(createClientiDTO.getCodice()).isPresent()) {
+            String errorMessage = String.format(CLIENTE_DUPLICATO, createClientiDTO.getCodice());
+            log.warn(errorMessage);
+            throw new DuplicateException(errorMessage);
+        }
+        Clienti clienti = Clienti.builder()
+                .codice(createClientiDTO.getCodice())
+                .nome(createClientiDTO.getNome())
+                .cognome(createClientiDTO.getCognome())
+                .indirizzo(createClientiDTO.getIndirizzo())
+                .comune(createClientiDTO.getComune())
+                .cap(createClientiDTO.getCap())
+                .prov(createClientiDTO.getProv())
+                .telefono(createClientiDTO.getTelefono())
+                .mail(createClientiDTO.getMail())
+                .dataCreaz(LocalDate.now())
+                .stato("1")
+                .card(Cards.builder()
+                        .codice(createClientiDTO.getCodice())
+                        .bollini(createClientiDTO.getCard().getBollini())
+                        .ultimaSpesa(createClientiDTO.getCard().getUltimaSpesa())
+                        .obsoleto(createClientiDTO.getCard().getObsoleto())
+                        .build())
+                .build();
+        clienti.getCard().setClienti(clienti);
+        clienti = clientiRepository.save(clienti);
+        result = createClientiDTO(clienti);
         log.trace(RETURN_VALUE, result);
         return result;
     }
